force-app/main/default/objects/Bidirectional_Sync_Rule__mdt/Bidirectional_Sync_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines which parent object fields should automatically populate with a child record&apos;s ID upon creation.</description>
    <label>Bidirectional Sync Rule</label>
    <pluralLabel>Bidirectional Sync Rules</pluralLabel>
</CustomObject>