force-app/main/default/objects/Bidirectional_Sync_Rule__mdt/fields/Child_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Lookup_Field__c</fullName>
    <description>The field on the child that holds the ID of the parent</description>
    <label>Child Lookup Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>