force-app/main/default/objects/Bidirectional_Sync_Rule__mdt/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>The API name of the record being created</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>