force-app/main/default/objects/Bidirectional_Sync_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this to temporarily disable this sync rule without deleting it.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>