force-app/main/default/objects/Bidirectional_Sync_Rule__mdt/fields/Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_API_Name__c</fullName>
    <description>The object we need to update</description>
    <label>Parent Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>