force-app/main/default/objects/Bidirectional_Sync_Rule__mdt/fields/Parent_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Target_Field__c</fullName>
    <description>The field on the parent that will receive the new Child ID</description>
    <label>Parent Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>